@@ -40,7 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
-* 
+* [jan] Mark Kolab folder as default when changing default address book preference.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1539,7 +1539,7 @@
    <date>2012-11-27</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
-* 
+* [jan] Mark Kolab folder as default when changing default address book preference.
    </notes>
   </release>
  </changelog>
