@@ -2,6 +2,8 @@
 v4.0.2-git
 ----------
 
+[jan] Mark Kolab folder as default when changing default address book
+      preference.
 
 
 ------
